Fix topics z-index and header sizing

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -117,7 +117,7 @@
   .headings {
     justify-content: space-between;
     align-items: center;
-    flex-direction: column;
+    flex-flow: row nowrap;
   }
 }
 
@@ -258,6 +258,7 @@
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 .policyTable--filterBar--open {
