--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -105,12 +105,12 @@ a {
   letter-spacing: 0.4em;
   font-size: 1.7em;
   text-indent: -9999em;
-  min-width: 240px;
-  height: 90px;
-  background-position: center;
+  min-width: 80px;
+  height: 40px;
   background-repeat: no-repeat;
   background-size: contain;
   margin-top: 0;
+  margin-bottom: 0;
   border: none;
 
   &.lang-EN { background-image: url('../img/op_logo_en.svg'); }
@@ -120,10 +120,10 @@ a {
 .pageSubTitle {
   font-size: 3rem;
   line-height: 2.5rem;
-  text-align: center;
+  text-align: right;
   flex: 0 1 auto;
   font-weight: 900;
-  margin: 20px 0 10px;
+  margin: 0;
 }
 
 .legend {
@@ -134,7 +134,6 @@ a {
 
 .footer {
   border-top: 1px solid var(--color-cream-darker);
-  z-index: -1;
 }
 
 .policyRow:not(.tableHeader) {
@@ -291,42 +290,6 @@ a {
   font-style: italic;
 }
 
-.timelineRow {
-  display: flex;
-  z-index: 2;
-  position: relative;
-}
-
-.timelineTickMarks {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  padding: 10px 0;
-  font-size: 11px;
-  color: #777;
-  z-index: 1;
-
-  .timelineElement {
-    font-weight: bold;
-  }
-}
-
-.timelineTickMark {
-  border-right: 1px dashed #ddd;
-  &:last-of-type {
-    border: none;
-  }
-}
-
-.timelineElement {
-  display: inline-block;
-  padding: 5px;
-  width: 260px;
-  color: #333;
-  font-size: 12px;
-}
-
 .no-hover:hover {
    border-bottom: 0;
 }
@@ -429,6 +392,7 @@ a {
 @media screen and (min-width: 800px) {
   .pageTitle {
     height: 120px;
+    min-width: 240px;
     margin-bottom: 0;
   }
 
